java 19 build - fix 1 enable preview for tests